# lockdown-service

./: .gitignore  Cargo.toml
migrations/: 20230903145712_create-user.sql  20230903183521_user-salt-table.sql  20230909222140_tokens-blacklist.sql  20230919180455_logins-table.sql  20230919180808_rename-collecition-column.sql  20230919190531_logins-owner-column.sql  20230919201916_logins-note.sql  20230919202157_logins-note-rename.sql  20230930190514_payments-table.sql  20231001140330_payments_add_owner_column.sql  20231010201936_secured_notes.sql  20231010202352_note_attachments.sql  20231010205437_secured_notes_add_owner_column.sql  20231011181212_update_modifed_at_automatically.sql  20231021185414_add_ownerid_on_attachments.sql
src/: cors.rs  main.rs  models.rs
src/handlers/: auth_handler.rs  handlers_inner.rs  login_handler.rs  mod.rs  payment_handler.rs  secured_note_handler.rs  user_handler.rs
src/models/: auth_model.rs  login_model.rs  mod.rs  payment_model.rs  secured_note.rs  user_model.rs
src/persistence/: auth_dao.rs  login_dao.rs  mod.rs  payment_dao.rs  secured_note_dao.rs  users_dao.rs
