[package]
name = "lockdown-service"
version = "0.1.0"
edition = "2021"
default-run = "lockdown-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rocket = { version="0.5.0-rc.2", features=["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
thiserror = "1.0.47"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
async-trait = "0.1"
bcrypt = "0.15.0"
rand = "0.8.5"
base64 = "0.21.3"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4", features = ["serde"] }
